--- a/index.html
+++ b/index.html
@@ -4,17 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Struttura Discord</title>
+    <title> Discord</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <nav class="container">
-        <div>Logo</div>
-        <div class="navc">Link Link Link</div>
-        <div>Login</div>
-    </nav>
+    <div class="navcolor">
+        <nav class="container">
+            <div> <img src="./img/logo.svg" alt="Discord"> </div>
+            <div class="navc">
+                <ul>
+                    <li><a href="">Scarica</a> </li>
+                    <li><a href="">Perchè Discord</a> </li>
+                    <li> <a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a> </li>
+                    <li><a href="">Assistenza</a> </li>
+                    
+                </ul>
+            </div>
+            <div><button class="btn" type="button">Login</button></div>
+        </nav>
+    </div>
     <header>
         <div class="logo">
 
