add: creazione header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li> <a href="">Nitro</a></li>
                     <li><a href="">Sicurezza</a> </li>
                     <li><a href="">Assistenza</a> </li>
-                    
+
                 </ul>
             </div>
             <div><button class="btn" type="button">Login</button></div>
@@ -30,16 +30,23 @@
     </div>
     <header>
         <div class="logo">
-
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente
+                di un piccolo gruppo di amici che vuole passare il tempo insieme, Discord rende più fcile chiacchierare
+                ogni giorno e ritrovarsi più spesso</p>
+            <div class="divbtn1"><button class="btn" type="button"><i class="fa-solid fa-arrow-down"></i> Scarica
+                per Mac</button> <button class="btn btnero" type="button">Apri Discord nel tuo browser</button>
+        </div></div>
         </div>
     </header>
     <main class="container">
         <section>
             <div class="large">
-
+<img src="./img/item1.svg" alt="item1">
             </div>
             <div class="small">
-
+<h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+<p>I server Discord sono organizzati in canali tematici in cui puoi, collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </section>
         <section>
