--- a/index.html
+++ b/index.html
@@ -35,43 +35,60 @@
                 di un piccolo gruppo di amici che vuole passare il tempo insieme, Discord rende più fcile chiacchierare
                 ogni giorno e ritrovarsi più spesso</p>
             <div class="divbtn1"><button class="btn" type="button"><i class="fa-solid fa-arrow-down"></i> Scarica
-                per Mac</button> <button class="btn btnero" type="button">Apri Discord nel tuo browser</button>
-        </div></div>
+                    per Mac</button> <button class="btn btnero" type="button">Apri Discord nel tuo browser</button>
+            </div>
+        </div>
         </div>
     </header>
     <main class="container">
         <section>
             <div class="large">
-<img src="./img/item1.svg" alt="item1">
+                <img src="./img/item1.svg" alt="item1">
             </div>
             <div class="small">
-<h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-<p>I server Discord sono organizzati in canali tematici in cui puoi, collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi, collaborare, condividere o
+                    semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </section>
         <section>
-            <div class="small"> </div>
+            <div class="small">
+                <h2>Dove trovarsi è facile</h2>
+                <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici del tuo server possono vedere che sei
+                    lì e unirsi istantaneamente senza dover chiamare.</p>
+            </div>
             <div class="large">
+                <img src="./img/item2.svg" alt="item2">
             </div>
         </section>
         <section>
             <div class="large">
-
+                <img src="./img/item3.svg" alt="item4">
             </div>
             <div class="small">
-
+                <h2>Da pochi a un fandom</h2>
+                <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri
+                    personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
             </div>
         </section>
-        <div class="bottom">
-            <div class="banner">
+        <div class="container banner">
 
+            <h2>Tecnologia affidabile per tenersi in contatto</h2>
+            <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in
+                video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione
+                schermo</p>
+            <img src="./img/item4-big.svg" alt="item4">
+            <div class="h2sfondo">
+                <h2>Prova ad iniziare la tua avventura</h2>
             </div>
+                    <button class="btn mac2color" type="button"><i class="fa-solid fa-arrow-down"></i> Scarica
+            per Mac</button>
         </div>
 
     </main>
     <footer>
         <div class="container foot">
-            <div class="footer-1 pink"></div>
+            <div class="footer-1 pink"> <h2>Il tuo posto per parlare</h2></div>
             <div class="footer-1 blu"></div>
             <div class="footer-1 blu"></div>
             <div class="footer-1 blu"></div>
