--- a/index.html
+++ b/index.html
@@ -81,23 +81,76 @@
             <div class="h2sfondo">
                 <h2>Prova ad iniziare la tua avventura</h2>
             </div>
-                    <button class="btn mac2color" type="button"><i class="fa-solid fa-arrow-down"></i> Scarica
-            per Mac</button>
+            <button class="btn mac2color" type="button"><i class="fa-solid fa-arrow-down"></i> Scarica
+                per Mac</button>
         </div>
 
     </main>
     <footer>
         <div class="container foot">
-            <div class="footer-1 pink"> <h2>Il tuo posto per parlare</h2></div>
-            <div class="footer-1 blu"></div>
-            <div class="footer-1 blu"></div>
-            <div class="footer-1 blu"></div>
-            <div class="footer-1 blu"></div>
+            <div class="footer-1 pink">
+                <h2>Il tuo posto per parlare</h2>
+                <div class=" footerita"><img src="./img/ita.png" alt="Bandiera italia"> Italiano <i
+                        class="fa-solid fa-chevron-down"></i></div>
+                <div class="socialdiv">
+                    <ul class="social">
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-square-instagram"></i></li>
+                        <li><i class="fa-brands fa-square-facebook"></i></li>
+                        <li><i class="fa-brands fa-youtube"></i></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-1 blu">
+                <ul>
+                    <li class="bluprimariga">Prodotto</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </ul>
+            </div>
+            <div class="footer-1 blu">
+                <ul>
+                    <li class="bluprimariga">Compagnia</li>
+                    <li>Chi siamo</li>
+                    <li>Lavora con noi</li>
+                    <li>Marchio</li>
+                    <li>Redazione</li>
+                    <li>Negozio</li>
+                </ul>
+            </div>
+            <div class="footer-1 blu">
+                <ul>
+                    <li class="bluprimariga">Risorse</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </ul>
+            </div>
+            <div class="footer-1 blu">
+                <ul>
+                    <li class="bluprimariga">Norme</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </ul>
+            </div>
         </div>
         <hr class="hr">
         <div class="container foot footer-2">
-            <div class="logo2"> LOGO</div>
-            <div class="logo2">BOTTONE</div>
+            <div> <img src="./img/logo.svg" alt="Discord"> </div>
+            <div><button class="btn registrati" type="button">Registrati</button></div>
 
         </div>
     </footer>
