--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </ul>
             </div>
         </div>
-        <hr class="hr">
+        <hr class="hr container">
         <div class="container foot footer-2">
             <div> <img src="./img/logo.svg" alt="Discord"> </div>
             <div><button class="btn registrati" type="button">Registrati</button></div>
